// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render correctly and match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 8,
      "elevation": 5,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3.84,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginBottom": 8,
      }
    }
  >
    Test Title
  </Text>
  <Text
    style={
      {
        "color": "#333",
        "fontSize": 14,
      }
    }
  >
    This is the test content for the card.
  </Text>
</View>
`;

exports[`Card should render correctly with different content and match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 8,
      "elevation": 5,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3.84,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginBottom": 8,
      }
    }
  >
    Another Card Example
  </Text>
  <Text
    style={
      {
        "color": "#333",
        "fontSize": 14,
      }
    }
  >
    This card contains different content to ensure the snapshot testing captures variations. It might be longer.
  </Text>
</View>
`;
